@@ -1,3 +1,4 @@
+	- Implemented glove slot which can expand floor
 	- Soda can flys away when shot by hero (LP: #242118)
 	- Freenukum can now also load lowercase named data files (LP: #245269)
 0.2.8
